# aoc-leptos-shuttle

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
src/: app.rs  lib.rs  main.rs  utils.rs
src/components/: app.rs
style/: main.scss
